fixed contact info on small screens

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -78,6 +78,9 @@
       padding: 0;
     }
   }
+  .boxes div {
+    font-size: 1rem;
+  }
 
   .projects {
     grid-template-columns: 1fr;
